# AAI-521-Group-9-Final-Project

./: .gitignore  README.md  data_preprocessing.py  pyproject.toml
app/: README.md  app.py  models.py  requirements.txt
