[project]
name = "aai-521"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "imageio>=2.37.2",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.7",
    "msgpack>=1.1.2",
    "msgpack-numpy>=0.4.8",
    "natsort>=8.4.0",
    "nbconvert[webpdf]>=7.16.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
]
